style.css
/* unused selectors

.card-title{
}

.card-author{
}

.card-pages{
}
.card-have-read{   
}*/

@font-face {
    font-family: bouncy;
    src: url(bouncy3.otf);
}

@font-face {
    font-family: power;
    src: url(power_entry.otf);
}

@font-face {
    font-family: anime;
    src: url(animeace.ttf);
}

* {
    margin: 0;
    padding: 0;
}

a,
a:link,
a:visited {
    text-decoration: none;
    color: white;
}

body {
    height: 100vh;
    background: linear-gradient(to right,
            #ffffff 0%,
            #ffffff 10%,
            rgb(243, 241, 206, 0.6) 25%,
            goldenrod 100%);
    color: white;
}

.body {
    display: flex;
    height: 100%;
}

.left-container {
    background-color: rgb(243, 241, 206, 0.6);
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.top-text {
    padding: 0 40px 0 40px;
    font-family: bouncy;
    font-size: 3rem;
    color: goldenrod;
}


.middle-text {
    padding: 0 40px 0 40px;
    font-family: bouncy;
    font-size: 3rem;
    color: goldenrod;
    color: rgb(255, 209, 94);
}

.number-1 {
    color: rgb(255, 153, 0);
    font-weight: 800;
    font-style: italic;
    font-family: anime;
}

.bottom-text {
    padding: 0 40px 0 40px;
    font-family: anime;
    font-size: 1.2rem;
    font-style: italic;
    color: goldenrod;
    color: rgb(255, 209, 94);
}

.right-container {
    flex: 3;
}

.nav-main {
    width: 100%;
    color: white;
    font-size: 1.8rem;
    display: flex;
    justify-content: flex-end;
    font-family: power;
    padding-right: 20px;
}

ul {
    padding: 25px 20px;
}


dialog::backdrop {
    backdrop-filter: blur(5px);
    box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
}

.user-input {
    padding: 10px 5px;
}

.flex-parent {
    display: flex;
    justify-content: center;
    align-items: center;
}

dialog {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    min-width: 25%;
    max-width: 350px;
    min-height: 50%;
    border-radius: 25px;
    background-color: white;

}

dialog h1 {
    font-size: 3rem;
    font-family: power;
    color: goldenrod;
    text-align: center;
    margin-top: 20px;
}

dialog .user-input {
    width: 100%;
    margin: 5px 0;
    font-size: 1.2rem;
    color: goldenrod;
}

.user-input {
    display: flex;
    align-content: center;
    justify-content: space-between;
}

.user-input input {
    background: rgba(255, 153, 0, 0.3);
    border: 2px solid rgba(218, 165, 32, 0.2);
    border-radius: 30px;
    padding: 10px;
    color: rgb(143, 143, 163);
}


.checkbox-input {
    padding: 0 0 10px 10px;
    accent-color: goldenrod;
}

.btn {
    margin: 15px 10px;
    width: 50%;
    height: 30px;
    border-radius: 8px;
    cursor: pointer;
    background: goldenrod;
    color: white;
    padding: 5px;
    font-family: bouncy;
}

.btn-close {
    border: none;
    font-size: 2rem;
    color: rgb(136, 120, 97);
    position: relative;
    left: 80%;
    padding-top: 20px;
}

input:focus {
    border: none;
    outline: 1px auto goldenrod;

}

.right-card-container {
    display: flex;
    flex-wrap: wrap;
    padding: 20px;
    justify-content: center;
    margin: 20px;
}


.card {
    color: rgb(235, 183, 100);
    font-size: 1.1rem;
    padding: 5px 10px 10px 10px;
    backdrop-filter: sepia(.4);
    background-color: bisque;
    box-shadow: -10px 5px 15px rgb(255, 163, 51);
    border-radius: 8px;
    font-family: sans-serif;
    min-width: 200px;
}

.card:hover {
	scale: 1.03;
	transition: 0.5s ease;
}

.card-close {
    border: none;
    font-size: 2rem;
    color: rgb(136, 120, 97);
    position: relative;
    left: 85%;
    background-color: transparent;
}

.card-book {
    font-family: bouncy;
    text-align: center;
    padding: 0 0 15px 0;
    margin-top: -20px;

}


.card span {
    color: rgb(172, 127, 15);
}

.card .span-read {
    font-size: 1.5rem;
    color: #11e911;
}

.card .span-notread {
    font-size: 1.5rem;
    color: #e9112e;
}

.span-read:hover,
.span-notread:hover{
    color:white;
}

.bx.bx-window-close:hover{
    color:rgb(192, 172, 60);
    transition: 0.2s ease;
}

ul:hover{
    transform:scale(1.12);
    transition: 0.2s ease;
}

.top-text:hover,.middle-text:hover,.bottom-text:hover{
    transform:scale(1.12);
    transition: 0.4s ease;
}

